Sat Nov  4 14:24:10 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.cc (wait_subproc): Still more debugging cleanup.

Sat Nov  4 00:51:38 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (EnumProcessesNT): Avoid 0 pids.
	(EnumProcesses9x): Ditto.
	* sigproc.cc (remove_child): Eliminate.
	(proc_subproc): Move remove_child stuff here.
	(wait_subproc): Synchronize with proc_subproc when error occurs.  Add
	more debugging info.
	* sigproc.h (procstuff): Add an entry.
	* spawn.cc (spawn_guts): Add sigframe here.

Fri Nov  3 20:07:14 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.cc (wait_subproc): Refine debug output.

Thu Nov  2 23:01:20 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (pinfo::init): Reverse order of setting status and pid info
	in an execed process to avoid a race.
	* sigproc.cc (wait_subproc): Print more info when a WFSO error occurs.
	* automode.c: New file.
	* syscalls.cc (close_all_files): Streamline slightly.
	* cygheap.cc (ccalloc): Clear *entire* allocated array.

Thu Nov  2 01:58:03 2000  Christopher Faylor <cgf@cygnus.com>

	* ntdll.h: Remove IO_COUNTERS definition since it is now in winnt.h.

Thu Nov  2 00:10:23 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (EnumProcessesNT): New function.  Eliminates dependence on
	psapi.h.
	(EnumProcesses9x): Rename from EnumProcessesW95.  Change arguments to
	be more useful for cygwin.
	(winpids::init): Accomodate argument changes.
	(enum_init): Ditto.
	* pinfo.h (winpids): Make pidlist dynamically extendable by storing it
	as a pointer and remembering the size.
	* ntdll.h: Add extra definitions needed for EnumProcessesNT.  Reformat
	via 'indent'.

Wed Nov  1 21:08:23 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Remove obsolete tests.
	(sigreturn): Construct pseudo-frame-pointer so that signal handler can
	figure out where to put return address when signals are coming in
	quickly.